# fastapi-yelp-postgres

./: .dockerignore  .env.example  .gitignore  AWS_DEPLOYMENT_GUIDE.md  DATABASE_OPTIMIZATION_REPORT.md  DEPLOYMENT_OPTIONS.md  Dockerfile  EDGE_CERTIFICATE_INSTALL.md  LETSENCRYPT_GUIDE.md  MAC_CERTIFICATE_INSTALL.md  PORT80_SECURITY_SUMMARY.md  POSTMAN_IMPORT_GUIDE.md  POSTMAN_SSL_SETUP.md  POSTMAN_TROUBLESHOOTING.md  RASPBERRY_PI_DEPLOYMENT.md  README.md  README_NEW.md  SECURITY_GUIDE.md  SSL_SETUP_GUIDE.md  api-docs-test.sh  api-timeout-test.html  aws-infrastructure.yml  backup-postgres.sh  certificate-download.html  check_schema.py  comprehensive-diagnostic.sh  cors-fix-test.sh  cors-test.sh  data-loading-test.sh  debug_reviews.py  deploy-aws.sh  deploy-complete.sh  deploy-ecr.sh  deploy-local.sh  deploy-raspberry-pi.sh  docker-compose.local.yml  docker-compose.yml  fail2ban-manager.sh  fail2ban.local  fastapi-auth.conf  (+27 more)
frontend/: .dockerignore  .env.production  Dockerfile  README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ApiTest.tsx  BusinessList.tsx  BusinessReviewsModal.tsx  ReviewList.tsx  TipList.tsx  UserList.tsx  UserReviewsModal.tsx
frontend/src/services/: api.ts
frontend/src/types/: api.ts
src/: lambda_handler.py  main.py
src/api/: business_routes.py  checkin_routes.py  review_routes.py  tip_routes.py  user_routes.py
src/core/: config.py
src/crud/: crud.py
src/db/: database.py  models.py
src/schemas/: schemas.py
